test/error/RealConst0.mod
MODULE RealConst0;

 CONST R* = 1.E309;

 PROCEDURE Go*; END Go;

END RealConst0.
